*** empty log message ***

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -527,7 +527,7 @@ width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
     <a name="-blur">-blur</a> <i>&lt;radius&gt;x&lt;sigma&gt;</i>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blur the image with a gaussian operator</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blur the image with a Gaussian operator</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 Blur with the given radius and
 standard deviation (sigma).
@@ -824,7 +824,7 @@ special format characters:
      %b   file size
      %c   comment
      %d   directory
-     %e   filename extention
+     %e   filename extension
      %f   filename
      %h   height
      %i   input filename
@@ -1764,7 +1764,7 @@ or other image attributes by embedding special format characters:</font></td></t
      %b   file size
      %c   comment
      %d   directory
-     %e   filename extention
+     %e   filename extension
      %f   filename
      %h   height
      %i   input filename
@@ -1887,9 +1887,9 @@ but not set as an image attribute (e.g. PNG images).
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="-gaussian">-gaussian</a> <i>&lt;radius&gt;x&lt;sigma&gt;</i>
+    <a name="-Gaussian">-Gaussian</a> <i>&lt;radius&gt;x&lt;sigma&gt;</i>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blur the image with a gaussian operator</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>blur the image with a Gaussian operator</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 Use the given radius and standard deviation (sigma).
 </font></td></tr></table>
@@ -3197,7 +3197,7 @@ width=15><b><font face="Helvetica, Arial"
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>sharpen the image</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-Use a gaussian operator of the given radius and
+Use a Gaussian operator of the given radius and
 standard deviation (sigma).
 </font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -3505,7 +3505,7 @@ other image attribute by embedding special format characters:</font></td></tr></
      %b   file size
      %c   comment
      %d   directory
-     %e   filename extention
+     %e   filename extension
      %f   filename
      %h   height
      %i   input filename
