--- a/www/Magick.html
+++ b/www/Magick.html
@@ -696,7 +696,7 @@ when you create the PDF file:</dd>
 One way is to use a bitmap as your transparency mask. Try</dd>
 
 <dd>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; c<tt>ombine -compose CopyOpacity image.gif
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <tt>composite -compose CopyOpacity image.gif
 mask.xbm transparent.gif</tt></dd>
 
 <dd>
