--- a/www/cd.html
+++ b/www/cd.html
@@ -19,7 +19,7 @@ for a limited time on CD. The CD includes everything that is found at the
 well as PerlMagick, WebMagick, and the delegates. To receive the CD, send
 $7.50 in US funds (check or money order made out to
 <tt>ImageMagick Studio</tt>)
-and a self-addressed stamped envelope large enough to accomodate a CD to
+and a self-addressed stamped envelope large enough to accommodate a CD to
 <pre>&nbsp;&nbsp;&nbsp; ImageMagick Studio
 &nbsp;&nbsp;&nbsp; P.O. Box 40
 &nbsp;&nbsp;&nbsp; Landenberg, PA&nbsp; 19350
@@ -31,7 +31,7 @@ for a one week turnaround although it may be less.
 <p>All proceeds from the CD will be donated to the <a href="http://www.specialolympics.com/">Special
 Olympics</a>.
 <p>Thanks goes to the SAS Institute Inc. for volunteering to burn these CD's.
-<p>Note, I have 50 ImageMagick CD's left. When they are gone I cannot guarentee
+<p>Note, I have 50 ImageMagick CD's left. When they are gone I cannot guarantee 
 that more will be produced.
 <p>
 <hr>
