--- a/www/cvs.html
+++ b/www/cvs.html
@@ -24,9 +24,9 @@ is CVS</font></font></font></b></td>
 </table>
 
 <dd>
-CVS is the Concurent Version System and is a very popular mean of version
+CVS is the Concurrent Version System and is a very popular mean of version
 control for software projects. It is designed to allow multiple authors
-to be able to simultanously operate on the same source tree. This source
+to be able to simultaneously operate on the same source tree. This source
 tree is centrally maintained, but each developer has a local mirror of
 this repository that they make their changes to.</dd>
 </dl>
@@ -119,7 +119,7 @@ Anonymous CVS</font></font></font></b></td>
 
 <dd>
 The source tree for ImageMagick is stored on <tt>cvs.simplesystems.org</tt>.
-To access the tree you need to first set up your CVSROOT enviroment variable
+To access the tree you need to first set up your CVSROOT environment variable
 so that cvs knows where to go to grab the source from. The proper value
 for CVSROOT is:</dd>
 
