--- a/www/install.html
+++ b/www/install.html
@@ -305,7 +305,7 @@ the configure script will determine the location of all delegates (external
 programs) and incorporate the full paths within the delegate.mgk file. This
 is the default because it is assumed that the installer's environment is
 appropriately configured and that the operation of ImageMagick should not
-be subject to the end-user's environment. However, if it is desireable to
+be subject to the end-user's environment. However, if it is desirable to
 allow the end user to define their own environment or possible that the end
 user's environment does not match the installer's environment (e.g. for binary
 distributions), --without-frozenpaths may be specified so that only the delegate's
@@ -948,7 +948,7 @@ Win2k</a> or Windows 95 does not provide any stock workspace (DSW) or project
 files (DSP) except for those included with third party libraries. Instead,
 there is a <tt>configure</tt> program that must be built and run that creates 
 an environment that meets your particular needs. The issue with the Visual 
-C++ working environement is that there are a fairly large number of mutually 
+C++ working environment is that there are a fairly large number of mutually 
 exclusive options that must all be used in a coherent manner, or problems 
 result. The Visual C++ system provides three different types of <i>runtimes</i>
 that must match across all application, library, and DLL code that is built. 
@@ -956,7 +956,7 @@ that must match across all application, library, and DLL code that is built.
 Configure</tt> creates a set of build files that are consistent for a specific
 runtime selection. The three options for runtime support are: 1) Multi-threaded
 DLL runtimes 2) Single-threaded library runtimes 3) Multi-threaded library
-runtimes In addition to these runtimes, the VisualMagick build environement
+runtimes In addition to these runtimes, the VisualMagick build environment
 allows you to select the way the ImageMagick components will be built. The
 three options for this are: 1) Everything as DLL's - using real X11 libraries
 2) Everything as DLL's - using stubbed out X11 libraries 3) Everything as
