--- a/www/new.html
+++ b/www/new.html
@@ -29,13 +29,13 @@ convert, edit, and compose images. </li>
 was contributed by Milan Votava.</li>
 
 <li>
-ImageMagick 5.0 uses substantually less memory than previous versions.
+ImageMagick 5.0 uses substantially   less memory than previous versions.
 If the the memory requirements exceeds 80 mega-bytes, all subsequent image
 operations are performed on disk to conserve memory.</li>
 
 <li>
 ImageMagick 5.0 utilizes memory-mapped I/O on machines that support it.
-This feature can be a substantual speed-up for image operations.</li>
+This feature can be a substantial speed-up for image operations.</li>
 
 <li>
 As of version 4.2.9, ImageMagick now has native blob support.</li>
