--- a/www/archives.html
+++ b/www/archives.html
@@ -18,7 +18,7 @@ noted). If you operate an ImageMagick mirror site, or know of additional
 mirrors of the
 <a href="http://www.imagemagick.org/">ImageMagick</a> archives,
 please E-mail <a href="mailto:sponsor-01@imagemagick.org">ImageMagick Studio</a>
-so that they can be listed here. Known mirror sites are provided with priviledged
+so that they can be listed here. Known mirror sites are provided with privileged
 access to the master site so that they are not denied access when the default
 user limit has been reached.
 <br>&nbsp;
