--- a/www/perl.html
+++ b/www/perl.html
@@ -380,7 +380,7 @@ radius.</td>
  <td>Blur</td>
   <td>geometry=&gt;<i>geometry</i>, radius=&gt;<i>double</i>, sigma=&gt;<i>
 double</i></td>
-  <td>blur the image with a gaussian operator of the given radius and standard
+  <td>blur the image with a Gaussian operator of the given radius and standard
 deviation (sigma).</td>
  </tr>
   <tr>
@@ -618,7 +618,7 @@ percentage</td>
  <td>MotionBlur</td>
   <td>geometry=&gt;<i>geometry</i>, radius=&gt;<i>double</i>, sigma=&gt;<i>
 double</i>,   angle=&gt;<i>double</i></td>
-  <td>blur the image with a gaussian operator of the given radius and standard
+  <td>blur the image with a Gaussian operator of the given radius and standard
 deviation (sigma) at the given angle to simulate the effect of motion</td>
  </tr>
                             <tr>
@@ -719,7 +719,7 @@ double</i>, color=&gt;{true, false}&nbsp;</td>
  <td>Sharpen</td>
   <td>geometry=&gt;<i>geometry</i>, radius=&gt;<i>double</i>, sigma=&gt;<i>
 double</i></td>
-  <td>sharpen the image with a gaussian operator of the given radius and standard
+  <td>sharpen the image with a Gaussian operator of the given radius and standard
 deviation (sigma).</td>
  </tr>
   <tr>
@@ -810,7 +810,7 @@ geometry=&gt;'106x80'</tt> is equivalent to <tt>width=&gt;106, height=&gt;80</tt
                         <p>You can specify <tt>@filename</tt> in both Annotate()
 and Draw(). This reads the text or graphic primitive instructions from a
 file on disk. For example, <pre>&nbsp;&nbsp; $image-&gt;Draw(fill=&gt;'red', primitive=&gt;'rectangle',&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp; points=&gt;'20,20 100,100&nbsp; 40,40 200,200&nbsp; 60,60 300,300');</pre>
- Is eqivalent to <pre>&nbsp;&nbsp; $image-&gt;Draw(fill=&gt;'red', primitive=&gt;'@draw.txt');</pre>
+ Is equivalent to <pre>&nbsp;&nbsp; $image-&gt;Draw(fill=&gt;'red', primitive=&gt;'@draw.txt');</pre>
  Where <tt>draw.txt</tt> is a file on disk that contains this: <pre>&nbsp; rectangle 20, 20 100, 100<br>&nbsp; rectangle 40, 40 200, 200<br>&nbsp; rectangle 60, 60 300, 300</pre>
  The <i>text</i> parameter for methods, Annotate(), Comment(), Draw(), and
 Label() can include the image filename, type, width, height, or other image
