--- a/www/import.html
+++ b/www/import.html
@@ -128,7 +128,7 @@ in the MIFF image format to a file entitled window.miff, use:
 </pre>
 <p>
 To select an X window or an area of the screen with the mouse and save it
-in the Encapsulated Postscript format to include in another document, use:
+in the Encapsulated PostScript format to include in another document, use:
 <pre>
     import figure.eps
 </pre>
@@ -472,7 +472,7 @@ width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
     <a name="-pointsize">-pointsize</a> <i>&lt;value&gt;</i>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>pointsize of the Postscript, OPTION1, or TrueType font</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>pointsize of the PostScript, OPTION1, or TrueType font</td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
