--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -24,8 +24,20 @@ ImageMagick Changes</font></font></font></b></td>
 <dd>
 <pre>
 2002-07-04  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Typos corrected in perl.html (thanks to Ron Savage);
+
+2002-07-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Added NTRegistryKeyLookup() to nt.c in order to look up ImageMagick
+    installation parameters from the Windows Registry.
+  * Updated GetMagickConfigurePath() in magick.c to use installation
+    path data from the Windows Registry (if available).
+  * Updated VisualMagick/ImageMagick.iss so that Windows Registry is
+    updated by install package.
+
+2002-07-03  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Semaphore.c will compile now when pthreads are not present.
   * 8-Bit Quantum PCD images now read correctly.
+  * The antialias member of the ImageInfo structure was not being cloned.
 
 2002-07-01  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * ImageMagick 5.4.7 released.
@@ -306,9 +318,9 @@ ImageMagick Changes</font></font></font></b></td>
 
 2002-01-28  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
             Glenn Randers-Pehrson  &lt;randeg@alum.rpi.edu&gt;
-  * Geometry strings respect -gravity (e.g. -gravity SouthWest
-	  -crop 100x100).
-  * Positive offsets in geometry strings move within the image canvas
+  * Geometry strings respect -gravity (e.g. -gravity SouthWest -crop
+    100x100).
+  * Postive offsets in geometry strings move within the image canvas
     with respect to the gravity (SouthWest gravity is similar to Postscript
     page offsets).
 
@@ -517,10 +529,10 @@ ImageMagick Changes</font></font></font></b></td>
     when doing modules link.
 
 2001-10-18  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
-  * Eliminated the libMagick.so dependency on libtiff by moving
+  * Eliminated the libMagick.so dependancy on libtiff by moving
     Huffman2DEncodeImage() from magick/compress.c to coders/pdf.c,
     coders/ps2.c and coders/ps3.c (suggested by Bob Friesenhahn).
-    This change has the side-effect of eliminating dependency on libpng
+    This change has the side-effect of elminating dependency on libpng
     and libjpeg as well (which libtiff may depend on).
 
 2001-10-16  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
