Bob updated the -antialias option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -446,6 +446,12 @@ width=15><b><font face="Helvetica, Arial"
     <a name="-antialias">-antialias</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>remove pixel aliasing</td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+By default antialiasing algorithms are used when drawing objects (e.g. lines)
+or rendering vector formats (e.g. WMF and Postscript). Use +antialias to
+disable use of antialiasing algorithms. Reasons to disable antialiasing
+</font></td></tr></table>
+include avoiding increasing colors in the image, or improving rendering speed.
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
