*** empty log message ***

--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -25,6 +25,8 @@ ImageMagick Changes</font></font></font></b></td>
 <pre>
 2002-07-04  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Typos corrected in perl.html (thanks to Ron Savage);
+  * A color profile is now correctly referred to as ICM instead of IPTC.
+  * $image-&gt;Get('clip-mask') now returns the clipping image.
 
 2002-07-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Added NTRegistryKeyLookup() to nt.c in order to look up ImageMagick
