--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -5,7 +5,11 @@
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
 This file records noteworthy changes in Magick++.
+(5.4.8)<BR>
+<UL>
+  <LI> No changes to report.
 
+</UL>
 <p>
 (5.4.7)<BR>
 <UL>
