--- a/www/convert.html
+++ b/www/convert.html
@@ -124,15 +124,15 @@ color="#FFFFFF"><font size="+1">
 <p>
 To make a thumbnail of a JPEG image, use:
 <pre>
-    convert -size 120x120 cockatoo.jpg -resize 120x120 +profile '*' thumbnail.jpg
+    convert -size 120x120 cockatoo.jpg -resize 120x120 +profile "*" thumbnail.jpg
 </pre>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-In this example, <tt>"-size 120x120"</tt> gives a hint to the JPEG decoder
+In this example, <tt>'-size 120x120'</tt> gives a hint to the JPEG decoder
 that the image is going to be downscaled to 120x120, allowing it to run
 faster by avoiding returning a full-resolution image.  The
-<tt>"-resize 120x120"</tt> specifies the desired dimensions of the
+<tt>'-resize 120x120'</tt> specifies the desired dimensions of the
 output image.  It will be scaled so its largest dimension is 120 pixels.  The
-<tt>"+profile '*'"</tt> removes any ICM, EXIF, IPTC, or other profiles
+<tt>'+profile "*"'</tt> removes any ICM, EXIF, IPTC, or other profiles
 that might be present in the input and aren't needed in the thumbnail.</font></td></tr></table>
 <p>
 To convert a <em>MIFF</em> image of a cockatoo to a SUN raster image, use:
