--- a/www/mogrify.html
+++ b/www/mogrify.html
@@ -129,15 +129,15 @@ To convert all the TIFF files in a particular directory to JPEG, use:
 <p>
 To convert a directory full of JPEG images to thumbnails, use:
 <pre>
-    convert -size 120x120 *.jpg -resize 120x120 +profile '*'
+    convert -size 120x120 *.jpg -resize 120x120 +profile "*"
 </pre>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-In this example, <tt>"-i size 120x120"</tt> gives a hint to the JPEG decoder
+In this example, <tt>'-i size 120x120'</tt> gives a hint to the JPEG decoder
 that the images are going to be downscaled to 120x120, allowing it to run
 faster by avoiding returning full-resolution images.  The
-<tt>"-resize 120x120"</tt> specifies the desired dimensions of the
+<tt>'-resize 120x120'</tt> specifies the desired dimensions of the
 output images.  It will be scaled so its largest dimension is 120 pixels.  The
-<tt>"+profile '*'"</tt> removes any ICM, EXIF, IPTC, or other profiles
+<tt>'+profile "*"'</tt> removes any ICM, EXIF, IPTC, or other profiles
 that might be present in the input and aren't needed in the thumbnails.</font></td></tr></table>
 <p>
 To scale an image of a cockatoo to exactly 640 pixels in width and 480
