*** empty log message ***

--- a/www/Magick.html
+++ b/www/Magick.html
@@ -427,7 +427,7 @@ Recovery option?</b></dt>
 Type</dd>
 
 <pre>&nbsp;&nbsp;&nbsp; display -map list image.miff</pre>
-If you want to use <a href="http://hpsgml.fc.hp.com/mhm/WhitePapers/ColorRecovery/ColorRecovery.html">Color
+If you want to use <a href="http://www.hp.com/workstations/support/documentation/manuals/user_guides/graphics/GAG11/3_XWindows11.html#HPColorRecovery">Color
 Recovery</a> all the time, put this in your X defaults file:
 <pre>&nbsp;&nbsp;&nbsp; display.map: list</pre>
 Now if you need to turn off Color Recovery temporarily, type
