--- a/www/formats.html
+++ b/www/formats.html
@@ -72,7 +72,7 @@ the image width, height, and depth</td>
 </tr>
 
 <tr>
-<td BGCOLOR="#D0D0D0"><a href="http://idt.net/~dclunie/medical-image-faq/html/">DCM</a></td>
+<td BGCOLOR="#D0D0D0"><b>DCM</b></td>
 
 <td BGCOLOR="#9EBAC6">Digital Imaging and Communications in Medicine image
 file format</td>
@@ -196,8 +196,7 @@ to read</td>
 
 <td BGCOLOR="#9EBAC6">FlashPix Format</td>
 
-<td BGCOLOR="#9EBAC6">requires <a href="http://www.digitalimaging.org/i_flashpix.html">FlashPix
-SDK</a></td>
+<td BGCOLOR="#9EBAC6">requires <a href="ftp://ftp.imagemagick.org/pub/ImageMagick/delegates">FlashPix SDK</a></td>
 </tr>
 
 <tr>
@@ -221,7 +220,7 @@ SDK</a></td>
 
 <td BGCOLOR="#9EBAC6">Gnuplot plot files</td>
 
-<td BGCOLOR="#9EBAC6">requires <a href="ftp://ftp.dartmouth.edu/pub/gnuplot/gnuplot3.5.tar.Z">gnuplot3.5.tar.Z</a></td>
+<td BGCOLOR="#9EBAC6">requires <a href="ftp://ftp.dartmouth.edu/pub/gnuplot/">gnuplot3.5.tar.Z</a></td>
 </tr>
 
 <tr>
@@ -597,7 +596,7 @@ to read</td>
 </tr>
 
 <tr>
-<td BGCOLOR="#D0D0D0"><b><a href="http://www.mediatel.lu/workshop/graphic/2D_fileformat/files/ps30.pdf">PSD&nbsp;</a></b></td>
+<td BGCOLOR="#D0D0D0"><b>PSD&nbsp;</b></td>
 
 <td BGCOLOR="#9EBAC6">Adobe Photoshop bitmap file</td>
 
@@ -753,7 +752,7 @@ width, height, and offset of the steganographic image</td>
 <td BGCOLOR="#9EBAC6">Scalable Vector Graphics</td>
 
 <td BGCOLOR="#9EBAC6">requires <a href="http://xmlsoft.org/">libxml2-2.0.0</a>;
-affine text transformations requires <a href="ftp://ftp.freetype.org/pub/freetype2/">freetype2-current.tar.gz</a></td>
+affine text transformations requires <a href="ftp://ftp.freetype.org/freetype/freetype2/">freetype-2.tar.gz</a></td>
 </tr>
 
 <tr>
