--- a/www/install.html
+++ b/www/install.html
@@ -109,7 +109,7 @@ Linux</a> source and binaries are also available.</dd>
 a problem I will investigate. <i>However, be sure you are using the most recent
 version from <a href="ftp://ftp.imagemagick.org/pub/ImageMagick/">ftp.imagemagick.org</a>
 , or a mirror site, before submitting any bug reports or suggestions</i>. 
-Report any problems via the <a href="http://www.simplesystems.org/ImageMagick/bugs.html">
+Report any problems via the <a href="http://studio.imagemagick.org/mailman/listinfo/magick-bugs">
 web-based reporting facility</a>.</p>
 </dl>
 </blockquote>
@@ -192,7 +192,7 @@ UNIX Compilation</font></font></font></b></td>
 </blockquote>
 <dl>
 <dd> If you do not have <tt>gunzip</tt>, it is
-available on <a href="ftp://prep.ai.mit.edu:pub/gnu/gzip-1.2.4.shar">prep.ai.mit.edu</a>
+available on <a href="ftp://prep.ai.mit.edu/pub/gnu/gzip-1.2.4.shar">prep.ai.mit.edu</a>
 .</dd>
 </dl>
 <blockquote>
