--- a/www/miff.html
+++ b/www/miff.html
@@ -221,8 +221,7 @@ preferred size and location of an image canvas.</dd>
 
 <dd>
 the number of bytes in the International Color Consortium color profile.
-The profile is defined by the <a href="ftp://sgigate.sgi.com/pub/icc/icc34.ps">ICC
-profile specification</a>.</dd>
+The profile is defined by the <em>ICC profile specification</em>.</dd>
 
 <dt>
 <b>red-primary</b>=<i>x,y</i></dt>
