--- a/www/new.html
+++ b/www/new.html
@@ -46,7 +46,7 @@ format.</li>
 
 <li>
 Thanks to Bob Friesenhahn ImageMagick now has a C++ wrapper:
-<a href="http://www.imagemagick.org/Magick++/">Magick++</a>.</li>
+<a href="http://www.imagemagick.org/www/Magick++/">Magick++</a>.</li>
 
 <li>
 ImageMagick has a delegate subsystem that allows image formats not directly
@@ -65,7 +65,7 @@ ImageMagick supports the <a href="http://www.kodak.com/US/en/drg/productsTechnol
 image format under NT/Win95.</li>
 
 <li>
-<a href="ftp://www.wizards.dupont.com/pub/ImageMagick/perl">PerlMagick</a>
+<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/perl">PerlMagick</a>
 now works on NT and Win95 computers.</li>
 
 <li>
@@ -74,11 +74,11 @@ Support for TrueType fonts is now available as a delegate within
 
 <li>
 Create 3-D web screamers with
-<a href="ftp://www.wizards.dupont.com/pub/ImageMagick/perl">ScreamerMagick</a>.</li>
+<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/perl">ScreamerMagick</a>.</li>
 
 <li>
 Convert or manipulate images directly from a Web page with
-<a href="ftp://www.wizards.dupont.com/pub/ImageMagick/perl">MagickStudio</a>.</li>
+<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/perl">MagickStudio</a>.</li>
 
 <li>
 Text is now aliased when rendering Postscript.</li>
@@ -91,7 +91,7 @@ or
 <tt>image.miff[1,2,2,3]</tt>.</li>
 
 <li>
-<a href="http://starship.skyport.net/crew/zack/pymagick/">PythonMagick</a>
+<a href="http://pythonmagick.procoders.net/">PythonMagick</a>
 is an object-oriented Python interface to the ImageMagick routines.</li>
 
 </ul>
