--- a/www/display.html
+++ b/www/display.html
@@ -293,7 +293,7 @@ file. See <em>X(1)</em>. Options on the command line supersede values specified
 in your X resources file.
 <p>
 For a more detailed description of each option, see
-<a href="imagemagick.html"><em>imagemagick(1)</em></a>.
+<a href="Imagemagick.html"><em>imagemagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
