--- a/www/Magick++/ChangeLog.html
+++ b/www/Magick++/ChangeLog.html
@@ -4,6 +4,14 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-07-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Image.cpp (profile): Added method to store, delete, or
+        retrieve named application profiles.
+
+</UL>
+<p>
 2002-07-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
