--- a/www/Magick++/Future.html
+++ b/www/Magick++/Future.html
@@ -22,7 +22,7 @@ The following is the tentative development and release plan.
 <p><b>1.0 </b>API for operating on individual images and STL containers
 of images
 <blockquote>This version supports all ImageMagick API operations which
-operate on a single image as well as providing <a href="http://www.sgi.com/Technology/STL/">STL</a>
+operate on a single image as well as providing <a href="http://www.sgi.com/tech/stl/">STL</a>
 container support for operating on multiple images (on any STL compatable
 container which supports a forward input iterator).</blockquote>
 
