--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -10,7 +10,9 @@ This file records noteworthy changes in Magick++.
 (5.4.8)<BR>
 <UL>
   <LI> The image type() method now also specifies the output image type
-    to use while writing.
+    to use while writing.<BR>
+  <LI> Added a profile() method to Image to support adding, removing,
+    and retrieving named embedded application profiles.
 
 </UL>
 <p>
