*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -11,11 +11,11 @@
 	<META NAME="KEYWORDS" CONTENT="ImageMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
 	<!--
-		TD P { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
-		P { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
-		BLOCKQUOTE { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
-		DD { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
-		DT { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
+		TD P { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 11pt }
+		P { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 11pt }
+		BLOCKQUOTE { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 11pt }
+		DD { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 11pt }
+		DT { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 11pt }
 		A:link { color: #0085c0 }
 		A:visited { color: #800080 }
 	-->
@@ -48,9 +48,20 @@ Create a composite image by combining several separate images <BR><IMG SRC="imag
 Draw shapes or text on an image <BR><IMG SRC="images/ball.png" NAME="Graphic9" ALT="*" ALIGN=BOTTOM WIDTH=14 HEIGHT=14 BORDER=0>
 Decorate an image with a border or frame <BR><IMG SRC="images/ball.png" NAME="Graphic10" ALT="*" ALIGN=BOTTOM WIDTH=14 HEIGHT=14 BORDER=0>
 Describe the format and characteristics of an image</P>
-<P STYLE="margin-left: 0.39in">Click on the <B>Wizard</B> to
-immediately go to the download area. 
 </P>
+<HR width=50%>
+<P STYLE="margin-left: 0.39in">Click on the Wizard to your right to
+immediately go to the download area or search the ImageMagick web site:
+
+<P STYLE="margin-left: 0.79in">
+<FORM method=GET action=http://www.google.com/search>
+<INPUT TYPE=text name=q size=25 maxlength=255 value="">
+<INPUT type=submit name=sa VALUE="Search">
+<input type=hidden name=domains value="www.imagemagick.org">
+<input type=hidden name=sitesearch value="www.imagemagick.org"></FORM>
+<p>
+<HR width=50%>
+
 <P STYLE="margin-left: 0.39in">You can access ImageMagick functions
 directly from the command line using the ImageMagick tools <A HREF="www/convert.html">convert</A>
 , <A HREF="www/mogrify.html">mogrify</A> , <A HREF="www/montage.html">montage</A>
