*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -23,7 +23,7 @@
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0085c0" VLINK="#800080" BGCOLOR="#ffffff">
 <BLOCKQUOTE>ImageMagick<FONT SIZE=1><SUP>TM</SUP></FONT> is a robust
-collection of tools and libraries offered under a very liberal usage
+collection of tools and libraries offered under a liberal usage
 <A HREF="www/Copyright.html">license</A> to read, write, and
 manipulate an image in many image <A HREF="www/formats.html">formats</A>
 (over 68 major formats) including popular formats like TIFF, JPEG,
