*** empty log message ***

--- a/www/Copyright.html
+++ b/www/Copyright.html
@@ -16,6 +16,8 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0000ee" VLINK="#551a8b" BGCOLOR="#ffffff">
+<center><img SRC="../images/magick_small.png" alt="" width="114" height="118"></center>
+
 <P>Copyright (C) 2002 ImageMagick Studio, a non-profit organization
 dedicated to making software imaging solutions freely available. 
 </P>
