Minor formatting; added mailto webmaster icon to HTML.

--- a/www/montage.html
+++ b/www/montage.html
@@ -1122,5 +1122,8 @@ authorization from the ImageMagick Studio.</strong>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
