--- a/www/display.html
+++ b/www/display.html
@@ -147,69 +147,69 @@ CD</strong>, etc.).
 <p>
 With <strong>display</strong>, you can perform these functions on an image:
 <dl>
-<img SRC="../images/ball.png" ALT="*">load an image from a file
-<img SRC="../images/ball.png" ALT="*">display the next image
-<img SRC="../images/ball.png" ALT="*">display the former image
-<img SRC="../images/ball.png" ALT="*">display a sequence of images as a slide show
-<img SRC="../images/ball.png" ALT="*">write the image to a file
-<img SRC="../images/ball.png" ALT="*">print the image to a <em>PostScript</em> printer
-<img SRC="../images/ball.png" ALT="*">delete the image file
-<img SRC="../images/ball.png" ALT="*">create a Visual Image Directory
-<img SRC="../images/ball.png" ALT="*">select the image to display by its thumbnail rather than name
-<img SRC="../images/ball.png" ALT="*">undo last image transformation
-<img SRC="../images/ball.png" ALT="*">copy a region of the image
-<img SRC="../images/ball.png" ALT="*">paste a region to the image
-<img SRC="../images/ball.png" ALT="*">restore the image to its original size
-<img SRC="../images/ball.png" ALT="*">refresh the image
-<img SRC="../images/ball.png" ALT="*">half the image size
-<img SRC="../images/ball.png" ALT="*">double the image size
-<img SRC="../images/ball.png" ALT="*">resize the image
-<img SRC="../images/ball.png" ALT="*">crop the image
-<img SRC="../images/ball.png" ALT="*">cut the image
-<img SRC="../images/ball.png" ALT="*">flop image in the horizontal direction
-<img SRC="../images/ball.png" ALT="*">flip image in the vertical direction
-<img SRC="../images/ball.png" ALT="*">rotate the image 90 degrees clockwise
-<img SRC="../images/ball.png" ALT="*">rotate the image 90 degrees counter-clockwise
-<img SRC="../images/ball.png" ALT="*">rotate the image
-<img SRC="../images/ball.png" ALT="*">shear the image
-<img SRC="../images/ball.png" ALT="*">roll the image
-<img SRC="../images/ball.png" ALT="*">trim the image edges
-<img SRC="../images/ball.png" ALT="*">invert the colors of the image
-<img SRC="../images/ball.png" ALT="*">vary the color brightness
-<img SRC="../images/ball.png" ALT="*">vary the color saturation
-<img SRC="../images/ball.png" ALT="*">vary the image hue
-<img SRC="../images/ball.png" ALT="*">gamma correct the image
-<img SRC="../images/ball.png" ALT="*">sharpen the image contrast
-<img SRC="../images/ball.png" ALT="*">dull the image contrast
-<img SRC="../images/ball.png" ALT="*">perform histogram equalization on the image
-<img SRC="../images/ball.png" ALT="*">perform histogram normalization on the image
-<img SRC="../images/ball.png" ALT="*">negate the image colors
-<img SRC="../images/ball.png" ALT="*">convert the image to grayscale
-<img SRC="../images/ball.png" ALT="*">set the maximum number of unique colors in the image
-<img SRC="../images/ball.png" ALT="*">reduce the speckles within an image
-<img SRC="../images/ball.png" ALT="*">eliminate peak noise from an image
-<img SRC="../images/ball.png" ALT="*">detect edges within the image
-<img SRC="../images/ball.png" ALT="*">emboss an image
-<img SRC="../images/ball.png" ALT="*">segment the image by color
-<img SRC="../images/ball.png" ALT="*">simulate an oil painting
-<img SRC="../images/ball.png" ALT="*">simulate a charcoal drawing
-<img SRC="../images/ball.png" ALT="*">annotate the image with text
-<img SRC="../images/ball.png" ALT="*">draw on the image
-<img SRC="../images/ball.png" ALT="*">edit an image pixel color
-<img SRC="../images/ball.png" ALT="*">edit the image matte information
-<img SRC="../images/ball.png" ALT="*">composite an image with another
-<img SRC="../images/ball.png" ALT="*">add a border to the image
-<img SRC="../images/ball.png" ALT="*">surround image with an ornamental border
-<img SRC="../images/ball.png" ALT="*">apply image processing techniques to a region of interest
-<img SRC="../images/ball.png" ALT="*">display information about the image
-<img SRC="../images/ball.png" ALT="*">zoom a portion of the image
-<img SRC="../images/ball.png" ALT="*">show a histogram of the image
-<img SRC="../images/ball.png" ALT="*">display image to background of a window
-<img SRC="../images/ball.png" ALT="*">set user preferences
-<img SRC="../images/ball.png" ALT="*">display information about this program
-<img SRC="../images/ball.png" ALT="*">discard all images and exit program
-<img SRC="../images/ball.png" ALT="*">change the level of magnification
-<img SRC="../images/ball.png" ALT="*">display images specified by a World Wide Web (WWW) uniform resource locator (URL)
+<dd><img SRC="../images/ball.png" ALT="*">load an image from a file
+<dd><img SRC="../images/ball.png" ALT="*">display the next image
+<dd><img SRC="../images/ball.png" ALT="*">display the former image
+<dd><img SRC="../images/ball.png" ALT="*">display a sequence of images as a slide show
+<dd><img SRC="../images/ball.png" ALT="*">write the image to a file
+<dd><img SRC="../images/ball.png" ALT="*">print the image to a <em>PostScript</em> printer
+<dd><img SRC="../images/ball.png" ALT="*">delete the image file
+<dd><img SRC="../images/ball.png" ALT="*">create a Visual Image Directory
+<dd><img SRC="../images/ball.png" ALT="*">select the image to display by its thumbnail rather than name
+<dd><img SRC="../images/ball.png" ALT="*">undo last image transformation
+<dd><img SRC="../images/ball.png" ALT="*">copy a region of the image
+<dd><img SRC="../images/ball.png" ALT="*">paste a region to the image
+<dd><img SRC="../images/ball.png" ALT="*">restore the image to its original size
+<dd><img SRC="../images/ball.png" ALT="*">refresh the image
+<dd><img SRC="../images/ball.png" ALT="*">half the image size
+<dd><img SRC="../images/ball.png" ALT="*">double the image size
+<dd><img SRC="../images/ball.png" ALT="*">resize the image
+<dd><img SRC="../images/ball.png" ALT="*">crop the image
+<dd><img SRC="../images/ball.png" ALT="*">cut the image
+<dd><img SRC="../images/ball.png" ALT="*">flop image in the horizontal direction
+<dd><img SRC="../images/ball.png" ALT="*">flip image in the vertical direction
+<dd><img SRC="../images/ball.png" ALT="*">rotate the image 90 degrees clockwise
+<dd><img SRC="../images/ball.png" ALT="*">rotate the image 90 degrees counter-clockwise
+<dd><img SRC="../images/ball.png" ALT="*">rotate the image
+<dd><img SRC="../images/ball.png" ALT="*">shear the image
+<dd><img SRC="../images/ball.png" ALT="*">roll the image
+<dd><img SRC="../images/ball.png" ALT="*">trim the image edges
+<dd><img SRC="../images/ball.png" ALT="*">invert the colors of the image
+<dd><img SRC="../images/ball.png" ALT="*">vary the color brightness
+<dd><img SRC="../images/ball.png" ALT="*">vary the color saturation
+<dd><img SRC="../images/ball.png" ALT="*">vary the image hue
+<dd><img SRC="../images/ball.png" ALT="*">gamma correct the image
+<dd><img SRC="../images/ball.png" ALT="*">sharpen the image contrast
+<dd><img SRC="../images/ball.png" ALT="*">dull the image contrast
+<dd><img SRC="../images/ball.png" ALT="*">perform histogram equalization on the image
+<dd><img SRC="../images/ball.png" ALT="*">perform histogram normalization on the image
+<dd><img SRC="../images/ball.png" ALT="*">negate the image colors
+<dd><img SRC="../images/ball.png" ALT="*">convert the image to grayscale
+<dd><img SRC="../images/ball.png" ALT="*">set the maximum number of unique colors in the image
+<dd><img SRC="../images/ball.png" ALT="*">reduce the speckles within an image
+<dd><img SRC="../images/ball.png" ALT="*">eliminate peak noise from an image
+<dd><img SRC="../images/ball.png" ALT="*">detect edges within the image
+<dd><img SRC="../images/ball.png" ALT="*">emboss an image
+<dd><img SRC="../images/ball.png" ALT="*">segment the image by color
+<dd><img SRC="../images/ball.png" ALT="*">simulate an oil painting
+<dd><img SRC="../images/ball.png" ALT="*">simulate a charcoal drawing
+<dd><img SRC="../images/ball.png" ALT="*">annotate the image with text
+<dd><img SRC="../images/ball.png" ALT="*">draw on the image
+<dd><img SRC="../images/ball.png" ALT="*">edit an image pixel color
+<dd><img SRC="../images/ball.png" ALT="*">edit the image matte information
+<dd><img SRC="../images/ball.png" ALT="*">composite an image with another
+<dd><img SRC="../images/ball.png" ALT="*">add a border to the image
+<dd><img SRC="../images/ball.png" ALT="*">surround image with an ornamental border
+<dd><img SRC="../images/ball.png" ALT="*">apply image processing techniques to a region of interest
+<dd><img SRC="../images/ball.png" ALT="*">display information about the image
+<dd><img SRC="../images/ball.png" ALT="*">zoom a portion of the image
+<dd><img SRC="../images/ball.png" ALT="*">show a histogram of the image
+<dd><img SRC="../images/ball.png" ALT="*">display image to background of a window
+<dd><img SRC="../images/ball.png" ALT="*">set user preferences
+<dd><img SRC="../images/ball.png" ALT="*">display information about this program
+<dd><img SRC="../images/ball.png" ALT="*">discard all images and exit program
+<dd><img SRC="../images/ball.png" ALT="*">change the level of magnification
+<dd><img SRC="../images/ball.png" ALT="*">display images specified by a World Wide Web (WWW) uniform resource locator (URL)
 </dl>
 </td></tr></table>
      <p>
@@ -293,7 +293,7 @@ file. See <em>X(1)</em>. Options on the command line supersede values specified
 in your X resources file.
 <p>
 For a more detailed description of each option, see
-<a href="Imagemagick.html"><em>imagemagick(1)</em></a>.
+<a href="ImageMagick.html"><em>ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -1648,7 +1648,7 @@ necessarily obeyed by all window managers.</td></tr></table>
 Offsets, if present, are handled in <em>X(1)</em> style.  A negative x offset is
 measured from the right edge of the screen to the right edge of the icon,
 and a negative y offset is measured from the bottom edge of the screen
-to the bottom edge of the icon.
+to the bottom edge of the icon.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
@@ -3705,6 +3705,9 @@ authorization from the ImageMagick Studio.</strong>
 &nbsp;</p>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
