--- a/www/identify.html
+++ b/www/identify.html
@@ -63,7 +63,7 @@ color="#FFFFFF"><font size="+1">
 <dt>
 <a href="#copy">Copyright</a>
 </dt>
-</ul>
+</dl>
 </td></tr></table>
 <table BORDER=0 WIDTH="100%"> 
 <tr> 
@@ -336,6 +336,9 @@ authorization from the ImageMagick Studio.</strong>
 &nbsp;</p>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
