--- a/www/import.html
+++ b/www/import.html
@@ -138,10 +138,6 @@ entitled root.jpeg, without using the mouse, use:
 <pre>
     import -window root root.jpeg
 </pre>
-</td></tr></table>
-     <p>
-<i><a href="#top">Back to Contents</a></i> 
-&nbsp;</p>
 <p>
 To capture the 512x256 area at the upper right corner of the X server
 screen in the PNG image format in a well-compressed file entitled corner.png,
@@ -685,6 +681,9 @@ authorization from the ImageMagick Studio.</strong>
 &nbsp;</p>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
